# trojan

./: .gitignore  README.md  stack.yaml
evil-directory/: evil-directory.cabal
evil-directory/src/System/: Directory.hs
trojan/: Setup.hs  trojan.cabal
trojan/src/: Main.hs
